Looks like PSR-7 will be Psr\Http\Message"

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Psr\\HttpMessage\\": "src"
+            "Psr\\Http\\Message\\": "src"
         }
     },
     "extra": {
