--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
             "homepage": "http://www.php-fig.org/"
         }
     ],
+    "require": {
+        "php": ">=5.3.0"
+    },
     "autoload": {
         "psr-4": {
-            "Psr\\Http\\Message\\": "src"
+            "Psr\\Http\\Message\\": "src/"
         }
     },
     "extra": {
