Changed travis language from hack to php

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 # see http://about.travis-ci.org/docs/user/languages/php/ for more hints
-language: hack
+language: php
 
 # list any PHP version you want to test against
 php:
