--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0"
+        "php": "^7.2 || ^8.0"
     },
     "autoload": {
         "psr-4": {
